--- a/lifebook-e754/i3status.conf
+++ b/lifebook-e754/i3status.conf
@@ -34,6 +34,8 @@ ethernet _first_ {
 battery 1 {
         format = "%status %percentage %remaining"
         path = "/sys/class/power_supply/CMB%d/uevent"
+        last_full_capacity = true
+        hide_seconds = true
 }
 
 tztime local {
